--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.btn {
+		@apply my-3 md:my-6 py-4 lg:mx-0 px-6 transition duration-500 ease-in-out rounded mx-auto border-2 font-bold;
+	}
+
+   .btn__primary,
+   .btn__transparent {
+      @apply text-gray-300;
+   }
+   
+   .btn__primary {
+      @apply bg-blue-600 border-blue-600 hover:bg-blue-800 hover:border-blue-800;
+   }
+
+   .btn__transparent {
+      @apply border-blue-600 bg-opacity-0 hover:bg-blue-600;
+   }
+
+   .btn__secondary {
+      @apply border-indigo-300 text-indigo-600 bg-indigo-300 hover:bg-indigo-200;
+   }
+
+   /* grid */
+   .grid-cols-2 {
+      @apply grid sm:grid-cols-2 gap-4 auto-rows-fr items-center;
+   }
+
+   /* Typography */
+   .heading__tertiary {
+      @apply text-3xl text-gray-800 font-bold leading-none mb-3;
+   }
+}
