--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,6 +34,10 @@
    }
 
    /* Typography */
+   .heading__primary {
+      @apply my-5 text-4xl md:text-5xl lg:text-6xl text-gray-200 leading-tight;
+   }
+   
    .heading__secondary {
       @apply text-gray-800 text-5xl font-black leading-tight w-full mb-7;
    }
@@ -71,5 +75,10 @@
 
    .section {
       @apply py-20 mx-auto border-b;
+   }
+
+   /* SECTIONS */
+   .hero__text {
+      @apply leading-normal text-gray-400 text-2xl md:text-3xl;
    }
 }
