--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -81,4 +81,12 @@
    .hero__text {
       @apply leading-normal text-gray-400 text-2xl md:text-3xl;
    }
+
+   /* FORM */
+   .input {
+      @apply rounded-sm px-4 py-3 mt-3 focus:outline-none bg-indigo-200 w-full text-gray-600;
+   }
+   .input-label {
+      @apply block text-gray-600 font-bold;
+   }
 }
